--- a/drools-idea-plugin/resources/META-INF/plugin.xml
+++ b/drools-idea-plugin/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
     <id>drools-idea-plugin</id>
     <name>Drools plugin for Intellij IDEA</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <vendor email="a.a.ganev@gmail.com">Artyom Ganev</vendor>
 
     <description>
@@ -18,9 +18,9 @@
     <depends>com.intellij.modules.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <fileTypeFactory implementation="ru.ganev.plugins.drools.DrlFileTypeFactory"/>
-        <lang.syntaxHighlighterFactory language="Drools" implementationClass="ru.ganev.plugins.drools.highlight.DrlSyntaxHighlighterFactory"/>
-        <lang.parserDefinition language="Drools" implementationClass="ru.ganev.plugins.drools.parsing.DrlParserDefinition"/>
+        <fileTypeFactory implementation="ru.ganev.intellij.plugins.drools.DrlFileTypeFactory"/>
+        <lang.syntaxHighlighterFactory language="Drools" implementationClass="ru.ganev.intellij.plugins.drools.highlight.DrlSyntaxHighlighterFactory"/>
+        <lang.parserDefinition language="Drools" implementationClass="ru.ganev.intellij.plugins.drools.parser.DrlParserDefinition"/>
     </extensions>
 
     <actions>
