--- a/drools-idea-plugin/resources/META-INF/plugin.xml
+++ b/drools-idea-plugin/resources/META-INF/plugin.xml
@@ -18,6 +18,7 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <fileTypeFactory implementation="ru.ganev.intellij.plugins.drools.DrlFileTypeFactory"/>
+        <lang.parserDefinition language="Drools" implementationClass="ru.ganev.intellij.plugins.drools.DrlParserDefinition"/>
     </extensions>
 
     <actions>
